# upload-server

./: Cargo.toml
src/: controllers.rs  lib.rs  main.rs
src/controllers/: upload_controller.rs  upload_data.rs
src/parsers/: image.rs  types.rs  video.rs
